--- a/tests/Obaki.XmlSpecialCharacterEscaper.Test/Obaki.XmlSpecialCharacterEscaper.Test.csproj
+++ b/tests/Obaki.XmlSpecialCharacterEscaper.Test/Obaki.XmlSpecialCharacterEscaper.Test.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Obaki.XmlSpecialCharacterEscaper\Obaki.XmlSpecialCharacterEscaper.csproj" />
+  </ItemGroup>
+
 </Project>
