--- a/tests/Obaki.XmlSpecialCharacterEscaper.Benchmark/Obaki.XmlSpecialCharacterEscaper.Benchmark.csproj
+++ b/tests/Obaki.XmlSpecialCharacterEscaper.Benchmark/Obaki.XmlSpecialCharacterEscaper.Benchmark.csproj
@@ -1,14 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <OutputType>Exe</OutputType>
+    <!-- <TargetFrameworks>net6.0;net7.0</TargetFrameworks> -->
+     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <OutputType>Exe</OutputType>
   </PropertyGroup>
-
   <ItemGroup>
    <PackageReference Include="BenchmarkDotNet" Version="0.13.5" />
   </ItemGroup>
-
 </Project>
